# docling_blueprint

./: .gitignore  404.html  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: docs.yaml  lint.yaml  package.yaml  release.yaml  tests.yaml
api/: index.html
customization/: index.html
demo/: app.py  run.sh
docs/: api.md  customization.md  future-features-contributions.md  getting-started.md  index.md  step-by-step-guide.md
future-features-contributions/: index.html
getting-started/: index.html
search/: search_index.json
src/blueprint/: hello.py
step-by-step-guide/: index.html
tests/unit/: test_hello.py
